--- a/WebGoat/Web.config
+++ b/WebGoat/Web.config
@@ -57,6 +57,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
         <credentials passwordFormat="Clear">
           <user name="admin" password="admin" />
           <user name="mario" password="luigi" />
+          <user name="alice" password="password" />
           <user name="bob" password="password" />
         </credentials>
       </forms>
