--- a/WebGoat/Web.config
+++ b/WebGoat/Web.config
@@ -58,6 +58,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
           <user name="admin" password="admin" />
           <user name="mario" password="luigi" />
           <user name="alice" password="password" />
+          <user name="john" password="password" />
           <user name="bob" password="password" />
         </credentials>
       </forms>
